--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     
     "ALIVE_MSG": {
       "description": "Put your alive msg here.",
-      "required": true
+      "required": "*ඉන්නව ඉනවා තාම පණපිටින් 💭✅*\n*👸🏻BLACK QUEEN 🖤🪄*\n`create by Arosh Samuditha`\n\n```Contact Owner:-```\nhttps://wa.me/94761676948?text=*Hellow+Arosh+😁🩷*"
     }   
 },
      "buildpacks": [
