--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     "ALIVE_MSG": {
       "description": "Put your alive msg here.",
       "required": true
-      "value": "_*I'm Bringing your video*_ ✨➾🔎"
+      "value": "*ඉන්නව ඉනවා තාම පණපිටින් 💭✅*\n\n*👸🏻BLACK QUEEN 🖤🪄*\n`create by Arosh Samuditha`\n\n```Contact Owner:-```\nhttps://wa.me/94761676948?text=*Hellow+Arosh+😁🩷*"
     }   
 },
      "buildpacks": [
