--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Black Queen",
   "description": "Javascript WhatsApp bot made by Arosh Samuditha",
-  "logo": "https://i.ibb.co/vX31j64/BLACK-QUEEN.png",
+  "logo": "https://i.ibb.co/1K9sKK4/BLACK-QUEEN-DP.png",
   "keywords": ["bot"],
   "success_url": "/",
 
